gateway-api/internal_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: internal-gateway
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: rest-api
spec:
  gatewayClassName: internal-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8001
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: soap-api
spec:
  gatewayClassName: internal-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8000
