gateway-api/tenant1.yaml
---
# This needs to be created to apply plugins that require an ingress class setting:
# https://docs.konghq.com/kubernetes-ingress-controller/latest/reference/resource-requiring-ingress-class/
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: t1-gw
spec:
  controller: konghq.com/kic-gateway-controller
---
apiVersion: v1
kind: Namespace
metadata:
  name: t1-gw
  labels:
    t1-gw-access: "true"
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: t1-gw
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: t1-gw
    namespace: t1-gw
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: t1-gw
  namespace: t1-gw
spec:
  gatewayClassName: t1-gw
  listeners:
    - name: prod-web
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              t1-gw-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: t1-service-1
  labels:
    t1-gw-access: "true"
---
kind: Service
apiVersion: v1
metadata:
  name: proxy-to-httpbin
  namespace: t1-service-1
spec:
  ports:
    - protocol: TCP
      port: 80
  type: ExternalName
  externalName: httpbin.konghq.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-to-httpbin
  namespace: t1-service-1
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: "rate-limit"
spec:
  parentRefs:
    - name: t1-gw
      namespace: t1-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /httpbin
      backendRefs:
        - name: proxy-to-httpbin
          kind: Service
          port: 80
