gateway-api/tenant2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: t2-gw
  labels:
    t2-gw-access: "true"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: t2-gw
  namespace: t2-gw
spec:
  gatewayClassName: kong
  infrastructure:
    parametersRef:
      group: gateway-operator.konghq.com
      kind: GatewayConfiguration
      name: kong
  listeners:
    - name: prod-web
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              t2-gw-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: t2-service-1
  labels:
    t2-gw-access: "true"
---
kind: Service
apiVersion: v1
metadata:
  name: proxy-to-httpbin
  namespace: t2-service-1
spec:
  ports:
    - protocol: TCP
      port: 80
  type: ExternalName
  externalName: httpbin.org
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-to-httpbin
  namespace: t2-service-1
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
    - name: t2-gw
      namespace: t2-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /httpbin
      backendRefs:
        - name: proxy-to-httpbin
          kind: Service
          port: 80
